# menu_project

./: README.md  pyproject.toml
config/: settings.py
menu/: admin.py  models.py  urls.py  views.py
menu/migrations/: 0001_initial.py
menu/templates/menu/: index.html
menu/templatetags/: menu_tags.py
